--- a/myapp/templates/login.html
+++ b/myapp/templates/login.html
@@ -17,8 +17,8 @@
     <link rel="stylesheet" href="{%static 'css/style.css'%}">
     <style>
       .bg{
-        background-color: #A9C9FF;
-background-image: linear-gradient(180deg, #A9C9FF 0%, #FFBBEC 100%);
+        background-color: #628789;
+background-image: linear-gradient(180deg,#DED0B6  0%, #643843 100%);
 
 height: 100vh;
 }
@@ -55,8 +55,8 @@ height: 100vh;
       <div class="col-8 ">
         <form action="" method="post" class="border shadow-lg  rounded p-5">
           <h2 class="text-center"
-            style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;"><strong>Login
-              Form!!!</strong></h2>
+            style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;"><strong>LOGIN
+              FORM...</strong></h2>
           {%csrf_token%}
           {{form.as_p}}
           <button type="submit" class="form-control btn btn-outline-secondary">Login</button>
